# snapdir

./: .actrc  .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  deny.toml  snapdir  snapdir-gcs-store  snapdir-manifest  snapdir-test
.devcontainer/: Dockerfile.ubuntu  devcontainer.json
.github/: dependabot.yml
.github/workflows/: b2-store.yml  bench-verify.yml  bindings-release.yml  ci.yaml  cpp.yml  docker-publish.yml  ffi.yml  go.yml  java.yml  node.yml  python.yml  release.yml  s3-store.yml  supply-chain.yml  zig.yml
benches/: .gitignore  Cargo.toml  README.md  clone-skip-compare.sh  compare.sh  reflink-compare.sh  run-iai-docker.sh
benches/baselines/: README.md  mirror_prune_set.json
benches/benches/: hot_paths.rs  iai_hot.rs  pipeline.rs  snappack.rs
benches/src/: lib.rs
benches/tests/: determinism.rs  mirror.rs  scenarios.rs  snappack_wire.rs
bindings/cpp/: .gitignore  Doxyfile  Makefile  README.md  snapdir.pc.in
bindings/go/: .gitignore  README.md  go.mod  snapdir.go  snapdir_api_test.go
bindings/java/: .gitignore  build.gradle.kts  pom.xml
bindings/node/: .gitignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bindings/node/scripts/: gen-wrapper.cjs
bindings/node/src/: lib.rs
bindings/node/test/: node_api.test.ts  node_manifest_options.test.ts
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml  snapdir
bindings/python/python/snapdir/: __init__.py  __init__.pyi  snapdir.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: python_api.py  python_manifest_options.py
bindings/zig/: .gitignore  README.md  build.zig  build.zig.zon
crates/snapdir/: Cargo.toml  README.md
crates/snapdir-api/: Cargo.toml  README.md
crates/snapdir-api/src/: lib.rs
crates/snapdir-api/tests/: api_checkout_restore_perms.rs  m0_api_surface.rs  m0_async_facade.rs  m0_cache_dir_extend.rs  m0_diff_on_conflict.rs  m0_error_enum.rs  m0_golden_parity.rs  m0_newtypes.rs  m0_options.rs  snapdir_api_multistore.rs
crates/snapdir-catalog/: Cargo.toml  README.md
crates/snapdir-catalog/src/: lib.rs
crates/snapdir-cli/: Cargo.toml  README.md
crates/snapdir-cli/src/: cli.rs  diff.rs  lib.rs  main.rs  progress.rs
crates/snapdir-cli/tests/: cache_commands.rs  catalog_commands.rs  catalog_default.rs  catalog_logging.rs  cli_surface.rs  completions_man.rs  defaults_command.rs  diff.rs  dryrun.rs  dx_args.rs  dx_autocomplete.rs  dx_defaults.rs  dx_errors.rs  dx_helptext.rs  dx_id_stdin.rs  dx_progress.rs  dx_recovery.rs  e2e.rs  external_store_roundtrip.rs  fast_walk.rs  list_options.rs  manifest.rs  mirror_checkout_cli.rs  mirror_durability.rs  mirror_linked_fastpath.rs  mirror_safety.rs  objects_store.rs  path_normalize.rs  plumbing.rs  progress_e2e.rs  progress_wire.rs  ratelimit_select.rs  store_env.rs  store_roundtrip.rs  sync_command.rs  sync_e2e.rs  sync_split.rs
crates/snapdir-cli/tests/cmd/: error-checkout-missing-id.trycmd  error-fetch-missing-store.trycmd  error-push-missing-store.trycmd  error-unknown-flag.trycmd  error-unknown-subcommand.trycmd  help-ancestors.trycmd  help-autocomplete.trycmd  help-checkout.trycmd  help-defaults.trycmd  help-diff.trycmd  help-fetch.trycmd  help-flush-cache.trycmd  help-id.trycmd  help-locations.trycmd  help-manifest.trycmd  help-pull.trycmd  help-push.trycmd  help-revisions.trycmd  help-stage.trycmd  help-sync.trycmd  help-verify-cache.trycmd  help-verify.trycmd  help.trycmd  version-flag.trycmd  version-subcommand.trycmd
crates/snapdir-core/: Cargo.toml  README.md
crates/snapdir-core/src/: cache.rs  copy_guard.rs  excludes.rs  hash_file.rs  lib.rs  manifest.rs  merkle.rs  mirror.rs  progress.rs  recover.rs  resources.rs  sigbus.rs  store.rs  walk.rs
crates/snapdir-core/tests/: compat_golden.rs  concurrent_mutation.rs  fast_walk.rs  golden_b3sum.rs  mirror_prune_set.rs  proptest_roundtrip.rs
crates/snapdir-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/snapdir-ffi/src/: lib.rs
crates/snapdir-ffi/tests/c/: m1_abi_surface.c  m1_init.c  m1_memory_contract.c  valgrind.supp
crates/snapdir-ssh-store/: Cargo.toml  README.md
crates/snapdir-ssh-store/src/: args.rs  config.rs  lib.rs  script.rs  sftp_engine.rs  ssh_engine.rs  url.rs  version.rs
crates/snapdir-ssh-store/tests/: accel.rs  emitted_contract.rs  fake_sftp_roundtrip.rs  fake_ssh_roundtrip.rs  loopback_sshd.rs
crates/snapdir-ssh-store/tests/common/: mod.rs  sshd.rs
crates/snapdir-ssh-store/tests/fixtures/: fake-sftp  fake-ssh
crates/snapdir-stores/: Cargo.toml  README.md
crates/snapdir-stores/src/: adaptive.rs  b2_store.rs  fetch.rs  file_store.rs  fsync.rs  gcs_store.rs  lib.rs  limits.rs  pack.rs  push.rs  retry.rs  router.rs  s3_store.rs  shim.rs  split.rs  stream.rs  sync.rs  transfer.rs  util.rs
crates/snapdir-stores/tests/: adaptive_wire.rs  apfs_clone.rs  backoff_wire.rs  clone_skip.rs  clone_skip_race.rs  manifest_list.rs  mirror_atomic_swap.rs  mirror_feasibility.rs  mirror_materialize_modes.rs  mirror_sync.rs  reflink.rs  shim_external_store.rs  snapdir-mock-store  split.rs
crates/snapdir/src/: main.rs
crates/snapdir/tests/: parity.rs
docker/: Dockerfile.build
docker/scripts/: sidecars-down.sh  sidecars-health.sh  sidecars-up.sh
docs/: index.md  install.md
docs/adr/: 0000-index.md  0001-differential-oracle-methodology.md  0002-manifest-format-freeze.md  0003-snapshot-id-is-blake3-of-manifest-text.md  0004-ring-tls-provider.md  0005-native-in-process-cloud-stores.md  0006-b2-over-s3-compatible-endpoint.md  0007-redb-catalog.md  0008-catalog-json-output-lock.md  0009-gcs-notfound-classification.md  0010-unix-only-drop-windows.md  0011-cargo-dist-musl-static-packaging.md  0012-scratch-docker-image.md  (+15 more)
examples/: README.md  sync-local-s3-gcs.sh
include/: snapdir.h
packaging/: Dockerfile  dist-workspace.toml  snapdir.pc
tests/fuzz/: .gitignore  Cargo.toml  README.md
tests/fuzz/fuzz_targets/: manifest_parser.rs
tools/: pyproject.toml
utils/: install.sh
(+90 files in other folders)
