[workspace]
resolver = "2"
members = [
    "crates/snapdir-core",
    "crates/snapdir-catalog",
    "crates/snapdir-stores",
    "crates/snapdir-cli",
    "benches",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.91.1"
authors = ["Bermi Ferrer <bermi@bermilabs.com>"]
license = "MIT"
repository = "https://github.com/snapdir/snapdir"
homepage = "https://github.com/snapdir/snapdir"
description = "Content-addressable directory snapshots — Rust port of snapdir."
keywords = ["snapshot", "content-addressable", "blake3", "backup"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
# Internal crates
snapdir-core = { path = "crates/snapdir-core", version = "1.1.0" }
snapdir-catalog = { path = "crates/snapdir-catalog", version = "1.1.0" }
snapdir-stores = { path = "crates/snapdir-stores", version = "1.1.0" }

# Errors: thiserror in libs, anyhow (+ context) in the bin.
thiserror = "2"
anyhow = "1"

[workspace.lints.clippy]
# clippy::pedantic at warn, low priority so targeted opt-outs below win.
pedantic = { level = "warn", priority = -1 }
# Targeted, justified opt-outs:
# - module_name_repetitions: re-exported types intentionally repeat module names.
module_name_repetitions = "allow"
# - missing_errors_doc / missing_panics_doc: deferred to the docs phase.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
strip = true

# Heavily-optimized release profile used for shipped binaries (see
# packaging/dist-workspace.toml `cargo-build-profile = "dist"`). cargo-dist
# builds every target with this profile; it must live at the workspace root.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
