[package]
name = "snapdir-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir hot-path microbenchmarks (criterion)."
publish = false

[lints]
workspace = true

# This crate ships no library code (src/lib.rs is doc-only). Disabling the
# default lib bench/test harnesses stops the empty libtest binary from
# intercepting criterion's CLI flags, so `cargo bench -p snapdir-benches`
# runs the real `hot_paths` benchmark without needing `--bench hot_paths`.
[lib]
bench = false
test = false

[dev-dependencies]
# `snapdir-core` is exercised only by the `hot_paths` benchmark (a bench/dev
# target — `src/lib.rs` is doc-only), so it belongs in dev-dependencies.
snapdir-core.workspace = true

# Pinned criterion; default-features = false keeps it lean (no gnuplot/HTML
# report deps). It carries no TLS, so the ring / no-aws-lc stance is unaffected.
criterion = { version = "0.8", default-features = false }

# Scratch trees for the walk hot-path benchmarks. Carries no TLS, so the ring /
# no-aws-lc stance is unaffected. Corpora are generated deterministically (no
# RNG) and cleaned up via tempfile's `Drop`.
tempfile = "3"

# Real hash / walk / manifest hot-path benchmarks for the three perf-critical
# paths (gate bench-compile).
[[bench]]
name = "hot_paths"
harness = false
