[package]
name = "snapdir-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir hot-path microbenchmarks (criterion)."
publish = false

[lints]
workspace = true

# The lib is a real, std-only synthetic-scenario generator + catalog (Scenario,
# tiers, deterministic_bytes) reused by the benches, the determinism gate, and
# the perf gate. `bench = false` disables the default lib bench harness so the
# empty libtest binary can't intercept criterion's CLI flags — that lets
# `cargo bench -p snapdir-benches` run the real `hot_paths` benchmark without
# needing `--bench hot_paths`. (`test` stays enabled; the determinism tests live
# in the separate `tests/scenarios.rs` integration binary regardless.)
[lib]
bench = false

[dev-dependencies]
# The lib itself is std-only; `snapdir-core` / `snapdir-stores` are used only by
# the `tests/` (determinism gate) and `benches/` (hot-path) targets to walk +
# id the generated trees, so they belong in dev-dependencies.
snapdir-core.workspace = true
snapdir-stores.workspace = true

# Pinned criterion; default-features = false keeps it lean (no gnuplot/HTML
# report deps). It carries no TLS, so the ring / no-aws-lc stance is unaffected.
criterion = { version = "0.8", default-features = false }

# Scratch trees for the walk hot-path benchmarks. Carries no TLS, so the ring /
# no-aws-lc stance is unaffected. Corpora are generated deterministically (no
# RNG) and cleaned up via tempfile's `Drop`.
tempfile = "3"

# Real hash / walk / manifest hot-path benchmarks for the three perf-critical
# paths (gate bench-compile).
[[bench]]
name = "hot_paths"
harness = false

# Full-pipeline wall-clock benches over the BENCH-tier scenarios (walk+hash,
# snapshot_id, push, fetch, sync). The "make an informed decision" tool — see
# benches/README.md for the save-baseline / --baseline workflow.
[[bench]]
name = "pipeline"
harness = false
