[package]
name = "snapdir-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir hot-path microbenchmarks (criterion)."
publish = false

[lints]
workspace = true

# The lib is a real, std-only synthetic-scenario generator + catalog (Scenario,
# tiers, deterministic_bytes) reused by the benches, the determinism gate, and
# the perf gate. `bench = false` disables the default lib bench harness so the
# empty libtest binary can't intercept criterion's CLI flags — that lets
# `cargo bench -p snapdir-benches` run the real `hot_paths` benchmark without
# needing `--bench hot_paths`. (`test` stays enabled; the determinism tests live
# in the separate `tests/scenarios.rs` integration binary regardless.)
[lib]
bench = false

[dev-dependencies]
# The lib itself is std-only; `snapdir-core` / `snapdir-stores` are used only by
# the `tests/` (determinism gate) and `benches/` (hot-path) targets to walk +
# id the generated trees, so they belong in dev-dependencies.
snapdir-core.workspace = true
snapdir-stores.workspace = true

# Pinned criterion; default-features = false keeps it lean (no gnuplot/HTML
# report deps). It carries no TLS, so the ring / no-aws-lc stance is unaffected.
criterion = { version = "0.8", default-features = false }

# Scratch trees for the walk hot-path benchmarks. Carries no TLS, so the ring /
# no-aws-lc stance is unaffected. Corpora are generated deterministically (no
# RNG) and cleaned up via tempfile's `Drop`.
tempfile = "3"

# Deterministic INSTRUCTION-COUNT perf gate. Pinned to an EXACT, well-aged stable
# release (0.16.1, 2025-07-30) — its MSRV (1.74.1) is comfortably below the
# workspace MSRV (1.91.1). The `iai_hot` bench measures CPU instruction counts
# (Ir / EstimatedCycles) under callgrind, which are deterministic (unlike
# wall-clock), and FAILS on a regression past the configured soft limit. The
# matching `iai-callgrind-runner` MUST be installed at this SAME version — see
# `run-iai-docker.sh` (the runner needs valgrind, so macOS runs it via Docker).
# Carries no TLS, so the ring / no-aws-lc stance is unaffected.
iai-callgrind = "=0.16.1"

# Real hash / walk / manifest hot-path benchmarks for the three perf-critical
# paths (gate bench-compile).
[[bench]]
name = "hot_paths"
harness = false

# Full-pipeline wall-clock benches over the BENCH-tier scenarios (walk+hash,
# snapshot_id, push, fetch, sync). The "make an informed decision" tool — see
# benches/README.md for the save-baseline / --baseline workflow.
[[bench]]
name = "pipeline"
harness = false

# Deterministic INSTRUCTION-COUNT perf gate (iai-callgrind, harness = false).
# Measures CPU instruction counts over FIXED TINY deterministic inputs so the
# counts are stable; FAILS on a >5% Ir / EstimatedCycles regression. Compiles on
# macOS (`--no-run`); the actual run needs valgrind, so use `run-iai-docker.sh`
# on macOS / Linux without native valgrind. See benches/README.md.
[[bench]]
name = "iai_hot"
harness = false
