[package]
name = "snapdir-node"
version = "1.11.0"
edition = "2021"
rust-version = "1.91.1"
authors = ["Bermi Ferrer <bermi@bermilabs.com>"]
license = "MIT"
repository = "https://github.com/snapdir/snapdir"
homepage = "https://snapdir.org"
description = "snapdir-node: Node.js (napi-rs) binding for the snapdir-api facade."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "3"
snapdir-api = { path = "../../crates/snapdir-api", version = "1.11.0" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[package.metadata.cargo-shear]
# tokio is declared to enable the rt-multi-thread runtime the napi async path relies on
# (via snapdir-api); it isn't referenced directly in node's src.
ignored = ["tokio"]

[lints]
workspace = true
