[package]
name = "snapdir-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir-api: stable async facade over snapdir-core/-stores/-catalog for language bindings."
readme = "README.md"

[dependencies]
snapdir-core.workspace = true
snapdir-catalog.workspace = true
snapdir-stores.workspace = true
thiserror.workspace = true

# Shared multi-thread runtime for the async wrappers (spawn_blocking over the
# sync snapdir-stores transfer engine). snapdir-core stays tokio-free.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "=2.2.2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
