[package]
name = "snapdir-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir CLI: the `snapdir` binary exposing all subcommands."
readme = "README.md"

[[bin]]
name = "snapdir"
path = "src/main.rs"

[dependencies]
snapdir-core.workspace = true
snapdir-catalog.workspace = true
snapdir-stores.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
# Terminal width (TIOCGWINSZ), self RSS (mach task_info / /proc/self/statm), and
# CPU sampling (getrusage) for the progress renderer. Already in the lock graph
# transitively — this just adds a direct edge; no new ANSI/term/sysinfo crates.
libc = "0.2"
# Release packaging (gen-assets job) shells out to the hidden `completions`/`man`
# subcommands; these crates generate those artifacts to stdout. No TLS / aws-lc.
clap_complete = "4"
clap_mangen = "0.3"

[dev-dependencies]
# CLI integration testing only (no TLS / aws-lc): trycmd snapshots the static
# surface, assert_cmd drives the binary, assert_fs builds temp trees.
trycmd = "=1.2.0"
assert_cmd = "=2.2.2"
assert_fs = "=1.1.4"
predicates = "=3.1.4"

[lints]
workspace = true
