[package]
name = "snapdir-stores"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir stores: FileStore, S3/B2/GCS native SDK stores + external-store shim."

[dependencies]
snapdir-core.workspace = true
thiserror.workspace = true

# --- S3 store (s3:// + S3-compatible) ---------------------------------------
# CRITICAL TLS constraint: the shipped binary statically links on musl, so the
# whole workspace standardizes on the `ring` rustls provider. `aws-lc-rs` is
# BANNED (deny.toml). The AWS SDK defaults to aws-lc-rs for both its crypto and
# its default HTTP connector, so we:
#   * disable default features on aws-config / aws-sdk-s3 (drops the default
#     aws-lc-rs-backed connector + default crypto),
#   * build the SDK's modern hyper-1.x HTTP client (`aws-smithy-http-client`)
#     with its `rustls-ring` provider and hand it to the SDK as a custom
#     `HttpClient`. Native root trust anchors stay on (the builder's default
#     `TrustStore`), matching the GCS path and the operator's keep-native-roots
#     decision.
#   * keep `behavior-version-latest` for stable SDK behavior.
# After building, `grep -i aws-lc Cargo.lock` MUST be empty. This uses the same
# rustls 0.23 / hyper 1.x island as the GCS/reqwest path — there is exactly one
# TLS stack in the lock.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "sso",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio",
    "sigv4a",
] }
aws-smithy-runtime-api = { version = "1", features = ["client", "http-1x"] }
# The SDK's hyper-1.x HTTP client + rustls(ring) TLS connector. `rustls-ring`
# pulls `default-client` (hyper 1.x) and rustls 0.23 with the ring backend; no
# aws-lc-rs, no hyper 0.14. We build it with `Provider::Rustls(CryptoMode::Ring)`
# and its default native-root TrustStore, then hand the `SharedHttpClient` to
# `aws_config`.
aws-smithy-http-client = { version = "1", default-features = false, features = [
    "rustls-ring",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
] }

# --- Transfer engine (concurrency + rate limiting) --------------------------
# `futures` provides the bounded-concurrency stream combinator
# (`buffer_unordered` / `try_collect`) used by `run_concurrent`. Ancient/stable
# 0.3 line — already in the lock graph transitively, so it satisfies the
# dependency-age cooldown (utils/ci/check-crate-age.sh).
futures = "0.3"

# `rayon` drives the LOCAL `FileStore` object copies (push/fetch_files) across a
# bounded thread pool sized by `TransferConfig::concurrency`. Local copies have
# no network bandwidth concern, so the async `run_concurrent`/RateLimiter path
# (used by the network stores) does not apply here — only the concurrency cap.
# Ancient/stable 1.x line, already in the lock graph transitively, so it
# satisfies the dependency-age cooldown (utils/ci/check-crate-age.sh).
rayon = "1"

# --- GCS store (gs://) ------------------------------------------------------
# CRITICAL TLS constraint (same as the S3 store): the shipped binary statically
# links on musl, so the workspace standardizes on the `ring` rustls provider and
# `aws-lc-rs` is BANNED (deny.toml). `google-cloud-storage` is post-1.0 but still
# churny, so it is PINNED EXACTLY. Its DEFAULT features drag in aws-lc-rs two
# ways via `google-cloud-auth`:
#   * `default-idtoken-backend` -> `dep:aws-lc-rs` (+ jsonwebtoken/aws_lc_rs),
#   * `default-rustls-provider` -> `rustls/aws_lc_rs`.
# So we set `default-features = false` (dropping both) and instead pin the rustls
# crypto provider to `ring` ourselves below. The auth/transport stack pulls
# `reqwest` with `rustls-no-provider`, i.e. it uses whatever rustls *process
# default* crypto provider is installed — `GcsStore::connect` installs the ring
# provider as that default. After building, `grep -i aws-lc Cargo.lock` MUST be
# empty (and no openssl-sys, which deny.toml also bans). Unpinned from the old
# `=1.12.0` exact pin to a caret range (the supply-chain cooldown in
# `utils/ci/check-crate-age.sh` already gates against too-fresh releases).
google-cloud-storage = { version = "1", default-features = false }
# `google-cloud-gax` is already in the graph transitively (via
# `google-cloud-storage`); we name it directly only to reach its error model —
# `Error::status()` -> `rpc::Code` — so `key_exists`/`get_bytes` can classify the
# SDK's service-level `NOT_FOUND` (which carries no HTTP 404) as "object absent".
# `default-features = false` keeps it from adding anything to the graph (no
# aws-lc). Unpinned from the old `=1.10.0` exact pin to a caret range.
google-cloud-gax = { version = "1", default-features = false }
# Force the `ring`-backed rustls crypto provider into the graph and expose its
# `CryptoProvider` so we can install it as the process default at runtime.
rustls-ring = { package = "rustls", version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
bytes = "1"

[dev-dependencies]
# Test-only: lets the `is_not_found` regression guard construct a synthetic
# HTTP-404 SDK error (`google_cloud_gax::error::Error::http`). `http` 1.x is
# already in the lock graph via `google-cloud-gax`; this never reaches the
# shipped binary.
http = "1"

[lints]
workspace = true
