[package]
name = "snapdir-stores"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "snapdir stores: FileStore, S3/B2/GCS native SDK stores + external-store shim."
readme = "README.md"

[features]
# Enables the injectable network-retry seam used by the `backoff_wire` tests:
# the `retry_network` helper and the per-SDK `*_attempt_from_err` extractors are
# always compiled, but the heavier scripted-`op` fake-injection harness is gated
# here so both `cargo test` (via `cfg(test)`) and a downstream
# `--features integration-mock` consumer can drive the retry wiring without any
# live cloud. Carries no runtime deps; an empty feature.
integration-mock = []

[dependencies]
snapdir-core.workspace = true
thiserror.workspace = true

# --- Receiver durability (fsync.rs) -----------------------------------------
# `libc` exposes the raw `sync_file_range`/`fsync` syscalls behind the batched
# receive-pack durability barrier (cfg-gated per platform). This is NOT a new
# supply-chain edge: `libc` is already a DIRECT dependency of `snapdir-core` and
# `snapdir-cli` (and pervasive in the lock graph), so naming it here adds ZERO
# crates to `Cargo.lock`. The shipped binary stays dependency-free (no shelling
# out to fsync/sync).
libc = "0.2"

# --- SNAPPACK wire format (pack.rs) ------------------------------------------
# `blake3` powers the INCREMENTAL payload hashing in `pack.rs`: obj payloads
# stream through the hasher in O(1) memory, which the buffer-only
# `snapdir_core::merkle::Hasher` trait (`hash_hex(&[u8])`) cannot do. This is
# NOT a new supply-chain edge: it is the exact version requirement
# `snapdir-core` already declares, so the lock graph gains no crate and the
# deny.toml posture is unchanged.
blake3 = "1.8.5"

# --- SNAPPACK 1Z zstd transport encoding (pack.rs) ---------------------------
# `zstd` wraps the WHOLE SNAPPACK body in one zstd frame for the additive
# `SNAPPACK 1Z` form: the writer streams `record* "end\n"` through
# `zstd::stream::write::Encoder` and the reader feeds `zstd::stream::read::Decoder`
# to the UNCHANGED record parser (incremental BLAKE3 untouched; the 128B-header /
# 64MiB-manifest / lying-len bounds all enforced on the DECOMPRESSED bytes). It
# bundles libzstd via `zstd-sys` (cc/build.rs) — the SAME C-build pattern already
# exercised by `blake3`, with no system zstd required — and is MIT/BSD-3 (license
# clean for deny.toml). `ruzstd` is decode-only and is NOT used as the encoder.
zstd = "0.13"

# --- S3 store (s3:// + S3-compatible) ---------------------------------------
# CRITICAL TLS constraint: the shipped binary statically links on musl, so the
# whole workspace standardizes on the `ring` rustls provider. `aws-lc-rs` is
# BANNED (deny.toml). The AWS SDK defaults to aws-lc-rs for both its crypto and
# its default HTTP connector, so we:
#   * disable default features on aws-config / aws-sdk-s3 (drops the default
#     aws-lc-rs-backed connector + default crypto),
#   * build the SDK's modern hyper-1.x HTTP client (`aws-smithy-http-client`)
#     with its `rustls-ring` provider and hand it to the SDK as a custom
#     `HttpClient`. Native root trust anchors stay on (the builder's default
#     `TrustStore`), matching the GCS path and the operator's keep-native-roots
#     decision.
#   * keep `behavior-version-latest` for stable SDK behavior.
# After building, `grep -i aws-lc Cargo.lock` MUST be empty. This uses the same
# rustls 0.23 / hyper 1.x island as the GCS/reqwest path — there is exactly one
# TLS stack in the lock.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "sso",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio",
    "sigv4a",
] }
aws-smithy-runtime-api = { version = "1", features = ["client", "http-1x"] }
# The SDK's hyper-1.x HTTP client + rustls(ring) TLS connector. `rustls-ring`
# pulls `default-client` (hyper 1.x) and rustls 0.23 with the ring backend; no
# aws-lc-rs, no hyper 0.14. We build it with `Provider::Rustls(CryptoMode::Ring)`
# and its default native-root TrustStore, then hand the `SharedHttpClient` to
# `aws_config`.
aws-smithy-http-client = { version = "1", default-features = false, features = [
    "rustls-ring",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
] }

# --- Transfer engine (concurrency + rate limiting) --------------------------
# `futures` provides the bounded-concurrency stream combinator
# (`buffer_unordered` / `try_collect`) used by `run_concurrent`. Ancient/stable
# 0.3 line — already in the lock graph transitively, so it satisfies the
# dependency-age cooldown (utils/ci/check-crate-age.sh).
futures = "0.3"

# `rayon` drives the LOCAL `FileStore` object copies (push/fetch_files) across a
# bounded thread pool sized by `TransferConfig::concurrency`. Local copies have
# no network bandwidth concern, so the async `run_concurrent`/RateLimiter path
# (used by the network stores) does not apply here — only the concurrency cap.
# Ancient/stable 1.x line, already in the lock graph transitively, so it
# satisfies the dependency-age cooldown (utils/ci/check-crate-age.sh).
rayon = "1"

# --- GCS store (gs://) ------------------------------------------------------
# CRITICAL TLS constraint (same as the S3 store): the shipped binary statically
# links on musl, so the workspace standardizes on the `ring` rustls provider and
# `aws-lc-rs` is BANNED (deny.toml). `google-cloud-storage` is post-1.0 but still
# churny, so it is PINNED EXACTLY. Its DEFAULT features drag in aws-lc-rs two
# ways via `google-cloud-auth`:
#   * `default-idtoken-backend` -> `dep:aws-lc-rs` (+ jsonwebtoken/aws_lc_rs),
#   * `default-rustls-provider` -> `rustls/aws_lc_rs`.
# So we set `default-features = false` (dropping both) and instead pin the rustls
# crypto provider to `ring` ourselves below. The auth/transport stack pulls
# `reqwest` with `rustls-no-provider`, i.e. it uses whatever rustls *process
# default* crypto provider is installed — `GcsStore::connect` installs the ring
# provider as that default. After building, `grep -i aws-lc Cargo.lock` MUST be
# empty (and no openssl-sys, which deny.toml also bans). Unpinned from the old
# `=1.12.0` exact pin to a caret range (the supply-chain cooldown in
# `utils/ci/check-crate-age.sh` already gates against too-fresh releases).
google-cloud-storage = { version = "1", default-features = false }
# `google-cloud-gax` is already in the graph transitively (via
# `google-cloud-storage`); we name it directly only to reach its error model —
# `Error::status()` -> `rpc::Code` — so `key_exists`/`get_bytes` can classify the
# SDK's service-level `NOT_FOUND` (which carries no HTTP 404) as "object absent".
# `default-features = false` keeps it from adding anything to the graph (no
# aws-lc). Unpinned from the old `=1.10.0` exact pin to a caret range.
google-cloud-gax = { version = "1", default-features = false }
# Force the `ring`-backed rustls crypto provider into the graph and expose its
# `CryptoProvider` so we can install it as the process default at runtime.
rustls-ring = { package = "rustls", version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
bytes = "1"

[dev-dependencies]
# Test-only: lets the `is_not_found` regression guard construct a synthetic
# HTTP-404 SDK error (`google_cloud_gax::error::Error::http`). `http` 1.x is
# already in the lock graph via `google-cloud-gax`; this never reaches the
# shipped binary.
http = "1"

[lints]
workspace = true
