[package]
name = "snapdir-fuzz"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
publish = false

[package.metadata]
cargo-fuzz = true

# Nested (empty) [workspace] table: this isolates the fuzz crate into its own
# workspace so the ROOT workspace (../../Cargo.toml) does NOT pick it up. The
# root must keep building with `cargo build --workspace --locked` without ever
# compiling this crate (which requires a nightly toolchain + cargo-fuzz). This
# is the default cargo-fuzz layout — do not add this crate to the root members.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
snapdir-core = { path = "../../crates/snapdir-core" }

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false
bench = false

# Keep some debug info so libFuzzer crash reports are useful, without a full
# unoptimized build.
[profile.release]
debug = 1
